<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.route.RouteActivity">

    <LinearLayout
        android:id="@+id/ll_tv_starting_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_starting_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rec_gray"
            tools:text="출발지" />

        <TextView
            android:id="@+id/tv_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/background_rec_gray"
            tools:text="도착지" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@+id/ll_tv_starting_destination"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_change_black_24" />

    <LinearLayout
        android:id="@+id/ll_tab_transportation_bar_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_tv_starting_destination">

        <ImageView
            android:id="@+id/ic_bustime_blue_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toStartOf="@+id/ic_car"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_bustime_blue_24" />

        <ImageView
            android:id="@+id/iv_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_walk"
            app:srcCompat="@drawable/ic_car_black_24" />

        <ImageView
            android:id="@+id/iv_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_bike_black_24" />

        <ImageView
            android:id="@+id/iv_walk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/iv_bike"
            app:srcCompat="@drawable/ic_walk_black_24" />

    </LinearLayout>


    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_tv_starting_destination"
        app:layout_constraintTop_toBottomOf="@+id/iv_multiply"
        app:srcCompat="@drawable/ic_star_black_24" />

    <ImageView
        android:id="@+id/iv_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_tv_starting_destination"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_multiply__black_24" />

    <LinearLayout
        android:id="@+id/ll_transportation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_tab_transportation_bar_4"
        android:background="@drawable/background_rec_gray" >

        <TextView
            android:id="@+id/tv_all_transprtation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="25dp"
            android:textSize="14sp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/all_transportation" />

        <TextView
            android:id="@+id/tv_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textSize="14sp"
            android:textColor="@color/gray_4"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/bus_5" />

        <TextView
            android:id="@+id/tv_subway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="182dp"
            android:textSize="14sp"
            android:textColor="@color/gray_4"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/subway_3" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_tab_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="318dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_transportation_bar"
        app:srcCompat="@drawable/ic_line_gray_" />

    <LinearLayout
        android:id="@+id/ll_today_afternoon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ll_transportation_bar"
        android:orientation="horizontal">>

        <TextView
            android:id="@+id/tv_departing_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="5dp"
            android:textSize="14sp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/departing_today" />

        <ImageView
            android:id="@+id/iv_upload_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="140dp"
            app:srcCompat="@drawable/ic_upload_white_24" />

        <TextView
            android:id="@+id/tv_best_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="5dp"
            android:textSize="14sp"
            android:fontFamily="@font/naver_map_pretendard_semi_bold"
            android:text="@string/best_route_order" />

        <ImageView
            android:id="@+id/iv_upload_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_upload_white_24" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_route_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_today_afternoon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">>

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>